<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.map.MapsFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/map_fields_margin">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/map_search_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:hint="@string/map_search_edit_text_hint"
            android:textColor="@color/black"
            android:background="@color/map_text_view_background"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/map_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_button_search"
            android:backgroundTint="@color/map_buttons"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/map_fields_margin">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/map_address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/map_address_text_size"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/map_text_view_background"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/map_show_weather_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_button_show_weather"
            android:backgroundTint="@color/map_buttons"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>